Terraform/sercurity-group.tf

resource "aws_security_group" "allow_multiple_ports_in_same_vpc" {
  name        = "allow_multiple_ports_in_same_vpc"
  description = "Allow traffic on ports 22, 4222, 8080, 3000, 3001 within the same VPC"
  vpc_id      = aws_vpc.custom.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 4222
    to_port     = 4222
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.custom.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
